Sources/Chapter 6/service-externalname.yaml
apiVersion: v1
kind: Service
metadata:
  name: external-db
spec:
  type: ExternalName
  externalName: my-prod-db.example.com # The actual external DNS name
