Sources/Chapter 6/service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-nodeport-service
spec:
  selector:
    app: myapp
  ports:
  - protocol: TCP
    port: 80       # Internal ClusterIP port
    targetPort: 8080 # Pod's container port
    # nodePort: 30080 # Optional: Specify a port in the range, otherwise one is auto-assigned
  type: NodePort
